--- a/packages/flutter/pubspec.yaml
+++ b/packages/flutter/pubspec.yaml
@@ -11,7 +11,13 @@ dependencies:
     sdk: flutter
 
   #Uncomment for Release version
-  parse_server_sdk: ^3.1.0
+  parse_server_sdk: 
+    git:
+      url: git://github.com/sprocketlabs/Parse-SDK-Flutter
+      path: packages/dart
+      branch: bugfix/curl-headers
+
+  #parse_server_sdk: ^3.1.0
 
   # Uncomment for local testing
   #parse_server_sdk:
