--- a/packages/flutter/pubspec.yaml
+++ b/packages/flutter/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
     git:
       url: git://github.com/sprocketlabs/Parse-SDK-Flutter
       path: packages/dart
-      branch: bugfix/curl-headers
+      ref: bugfix/curl-headers
 
   #parse_server_sdk: ^3.1.0
 
